# SLL---Singly-Linked-List-Python

./: README.md  pyproject.toml  setup.py
SLL/: __init__.py
linkedlist/: __init__.py
sll/: linked_list.py
