[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "linkedlist"
version = "0.1.0"
description = "A simple Singly Linked List implementation in Python"
readme = "README.md"
license = { file = "LICENSE" }
authors = [
  { name="Ahmedhm1", email="ahhi9014@email.com" }
]
dependencies = []
